kubernetes/apps/monitoring/loki/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/group: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "loki.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
